--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-ang-app",
+  "name": "verizon-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,10 +19,10 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "webpack": "^4.42.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
