--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.0.4",
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "~9.0.4",
+    "@ckeditor/ckeditor5-angular": "^1.2.2",
     "core-js": "^3.6.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
