--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --ssl --ssl-key localhost.key  --ssl-cert localhost.crt",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,15 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.4",
-    "@angular/common": "~9.0.4",
+    "@angular/common": "^9.0.5",
     "@angular/compiler": "~9.0.4",
-    "@angular/core": "~9.0.4",
+    "@angular/core": "^9.0.5",
     "@angular/forms": "~9.0.4",
-    "@angular/platform-browser": "~9.0.4",
+    "@angular/platform-browser": "^9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.4",
-    "@angular/router": "~9.0.4",
+    "@angular/router": "^9.0.5",
     "@ckeditor/ckeditor5-angular": "^1.2.2",
+    "@fortawesome/angular-fontawesome": "^0.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@popperjs/core": "^2.1.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "jquery": "^3.4.1",
+    "ngx-infinite-scroll": "^8.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "webpack": "^4.42.0",
