--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
     "@angular/common": "^9.0.5",
     "@angular/compiler": "~9.0.4",
     "@angular/core": "^9.0.5",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.4",
     "@angular/platform-browser": "^9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "^9.0.5",
     "@ckeditor/ckeditor5-angular": "^1.2.2",
+    "@ckeditor/ckeditor5-collaboration": "^12.0.0",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@popperjs/core": "^2.1.0",
     "bootstrap": "^4.4.1",
+    "conclavity": "^1.0.14",
     "core-js": "^3.6.4",
+    "firebase": "^7.11.0",
     "jquery": "^3.4.1",
     "ngx-infinite-scroll": "^8.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "safe-pipe": "^0.3.0",
     "tslib": "^1.10.0",
     "webpack": "^4.42.0",
     "zone.js": "~0.10.2"
