--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/core": "^9.0.5",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.4",
+    "@angular/localize": "^9.0.7",
     "@angular/platform-browser": "^9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "^9.0.5",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.1",
     "@popperjs/core": "^2.1.0",
     "bootstrap": "^4.4.1",
     "conclavity": "^1.0.14",
